# hydra-auto-resume

./: .gitignore  README.md  pyproject.toml
src/hydra_auto_resume/: __init__.py  cmd_line.py  main.py  resolver.py  wandb_tools.py
tests/: test_auto_resume.py
tests/test_app/: app.py
tests/test_app/configs/: config.yaml
tests/test_app/configs/experiment/: causal3di.yaml
tests/test_app/configs/model/: resnet.yaml
